kubernetes/components/opentelemetry-collector/collector.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nativelink-to-nats
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: nativelink
  egress:
  - to:  # Allow access to Kafka
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nats-system
      podSelector:
        matchLabels:
          app: kafka
    ports:
    - protocol: TCP
      port: 9092
  - to:  # Allow access to NATS
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nats-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: nats
    ports:
    - protocol: TCP
      port: 4222
  - to:  # Allow DNS resolution
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  policyTypes: [Egress]
